<?xml version="1.0"?>
<package format="2">
  <name>chomp</name>
  <version>0.0.0</version>
  <description>Chomp in third party packages for path planner </description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> mzcommon</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
