<?xml version="1.0"?>
<package format="2">
  <name>steering_functions</name>
  <version>0.0.0</version>
  <description>steering_functions in third party packages for path planner </description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
